// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MessageModalSnap should render correctly with: [object Object] 1`] = `
.c0 {
  width: 600px;
  margin: auto;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  z-index: 1000;
}

<div>
  <div
    class="c0"
    data-mocked="Container"
  >
    <div>
      <div
        data-mocked="Header"
        variant="h2"
      >
        Notice
      </div>
    </div>
    <div>
      <div
        data-mocked="Box"
        float="right"
        padding="{\\"bottom\\":\\"s\\"}"
      >
        <div
          data-mocked="Button"
          variant="primary"
        >
          Ok
        </div>
      </div>
    </div>
    <div
      data-mocked="SpaceBetween"
    >
      <div
        data-mocked="Box"
      >
        <div
          data-mocked="StatusIndicator"
          type="info"
        >
          Info Test
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`MessageModalSnap should render correctly with: [object Object] 2`] = `
.c0 {
  width: 600px;
  margin: auto;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  z-index: 1000;
}

<div>
  <div
    class="c0"
    data-mocked="Container"
  >
    <div>
      <div
        data-mocked="Header"
        variant="h2"
      >
        Warning
      </div>
    </div>
    <div>
      <div
        data-mocked="Box"
        float="right"
        padding="{\\"bottom\\":\\"s\\"}"
      >
        <div
          data-mocked="Button"
          variant="primary"
        >
          Ok
        </div>
      </div>
    </div>
    <div
      data-mocked="SpaceBetween"
    >
      <div
        data-mocked="Box"
      >
        <div
          data-mocked="StatusIndicator"
          type="warning"
        >
          Warning Test
        </div>
      </div>
      <div
        data-mocked="Box"
      >
        <div
          data-mocked="TextContent"
        >
          <p>
            <a
              href="https://docs.aws.amazon.com/iot-twinmaker/latest/guide/what-is-twinmaker.html"
            >
               
              Learn More
               
              <div
                data-mocked="Icon"
                name="external"
                variant="link"
              />
               
            </a>
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`MessageModalSnap should render correctly with: [object Object] 3`] = `
.c0 {
  width: 600px;
  margin: auto;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  z-index: 1000;
}

<div>
  <div
    class="c0"
    data-mocked="Container"
  >
    <div>
      <div
        data-mocked="Header"
        variant="h2"
      >
        Error - unable to render the scene
      </div>
    </div>
    <div
      data-mocked="SpaceBetween"
    >
      <div
        data-mocked="Box"
      >
        <div
          data-mocked="StatusIndicator"
          type="error"
        >
          Error Test
        </div>
      </div>
      <div
        data-mocked="Box"
      >
        <div
          data-mocked="TextContent"
        >
          <p>
            <a
              href="https://docs.aws.amazon.com/iot-twinmaker/latest/guide/what-is-twinmaker.html"
            >
               
              Learn More
               
              <div
                data-mocked="Icon"
                name="external"
                variant="link"
              />
               
            </a>
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
